--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include LICENSE ChangeLog TODO
-recursive-include examples *.txt *.py
+recursive-include example *.txt *.py
 recursive-include tests *.txt *.py Makefile *.good example
